--- a/README.Rmd
+++ b/README.Rmd
@@ -67,6 +67,7 @@ t.test(formula = species ~ location, data = fish_long)
 ```
 
 The p value 0.5596 is greater than  0.05, therefore the null hypothesis will not be rejected. This is because the null hypotheis is rejected when the p value is smaller than 0.05, and since the obtained p value was 0.5596 which was greater than 0.05, there was failure to reject the null hypothesis stating that there was no difference in teh number of species in the main rivers caused by the presence of tributaries.
+The means from the different locations were different, the mean in the downstream group was  16.41667 and the mean in the upstream group was 14.58333. The mean difference was 1.83334
 
 ## Question C
 
