--- a/README.Rmd
+++ b/README.Rmd
@@ -5,6 +5,7 @@ date: "2021-04-22"
 output: github_document
 ---
 
+# Comparing means
 
 Researchers studying the number of electric fish species living in various parts of the Amazon basin were interested in whether the presence of tributaries affected the local number of electric fish species in the main rivers (Fernandes et al. 2004).
 
@@ -18,7 +19,7 @@ For each question below, write a sentence answering the question and show the co
 
 > What is the mean different in the number of species between areas upstream and downstream of a tributary? What is the 95% confidence interval of this mean difference. Show your code and write a sentence giving your answer
 
-ANSWER
+
 
 ```{r}
 
@@ -62,7 +63,6 @@ Lower_limit = 8.253697
 
 > Test the hypothesis that the tributaries have no effect on the number of species of electric fish.
 
-ANSWER
 
 ```{r}
 t.test(formula = species ~ location, data = fish_long)
@@ -75,7 +75,6 @@ The means from the different locations were different, the mean in the downstrea
 
 > State the assumptions that you had to make to complete parts (A) and (B). Create a graph to assess whether one of those assumptions was met.
 
-ANSWER
 
 ```{r}
 fish_long %>% 
@@ -100,7 +99,15 @@ would be close enough to generate an overall normal distribution.
 Based on the graph,the distribution does not appear to be normal and therefore
 does not meet teh assumption made about the normality.
 
+# ANOVA
 
+Fiddler crabs are so called because males have a greatly enlarged “major” claw, which is used to attract females and to defend a burrow.
+
+Darnell and Munguia (2011) recently suggested that this appendage might also act as a heat sink, keeping males cooler while out of the burrow on hot days.
+
+To test this, they placed four groups of crabs into separate plastic cups and supplied a source of radiant heat (60-watt light bulb) from above. The four groups were intact male crabs, male crabs with the major claw removed; male crabs with the other (minor) claw removed (control); and intact female fiddler crabs.
+
+They measured the body temperature of crabs every 10 minutes for 1.5 hours. These measurements were used to calculate a rate of heat gain for every individual crab in degrees C/log minute. Rates of heat gain for all crabs are provided in the accompanying data file.
 
 
 ## Question D 
